@@ -4,8 +4,8 @@
 \title{Generates multiple classification images by participant or condition}
 \usage{
 batchGenerateCI(data, by, stimuli, responses, baseimage, rdata,
-  saveasjpeg = TRUE, antiCI = FALSE, scaling = "autoscale",
-  constant = 0.1)
+  saveasjpeg = TRUE, saveunscaledjpeg = FALSE, targetpath = "./cis",
+  label = "", antiCI = FALSE, scaling = "autoscale", constant = 0.1)
 }
 \arguments{
 \item{data}{Data frame}
@@ -21,6 +21,12 @@ batchGenerateCI(data, by, stimuli, responses, baseimage, rdata,
 \item{rdata}{String pointing to .RData file that was created when stimuli were generated. This file contains the contrast parameters of all generated stimuli.}
 
 \item{saveasjpeg}{Boolean stating whether to additionally save the CI as jpeg image}
+
+\item{saveunscaledjpeg}{Optional boolean specifying whether unscaled versions of classification images should be saved as jpeg}
+
+\item{targetpath}{Optional string specifying path to save jpegs to (default: ./cis)}
+
+\item{label}{Optional string to insert in file names of jepgs to make them easier to identify}
 
 \item{antiCI}{Optional boolean specifying whether antiCI instead of CI should be computed}
 
